--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>How to become Full stack developer ?</title>
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
+		<pre>
+			Things to learn in choronology :
+			
+			Step 1 :
+			Front end development -->	HTML5	CSS	Clent side Javascript programming
+			
+			Step 2 :
+			Back end developement -->      Python or Ruby or PHP or Node JS
+			
+			Step 3 :
+			Database Programming -->	MySQL or Oracle or SQL or MongoDB
+			
+			Step 4:
+			Framework to bundle up everything you learn in previous steps -->	Django or Express or Rails
+			
+			
+			
+			You’ll typically see a mix of front and back end skills listed on full stack web developer job listings, including:
+    			HTML, CSS, JavaScript
+    			Ideally, one or more third-party library like ReactJS or Angular or Express
+    			Programming languages and libraries like Ruby, PHP, Python
+    			Experience with databases
+    			Version control --> GIT / GitHub
+    			Knowledge of security concerns and best practices
+    			Ideally, some knowledge of web or visual design, plus user experience best practices
+
+			
+		</pre>
 	</body>
 </html>
