--- a/index.html
+++ b/index.html
@@ -40,6 +40,53 @@
     			Ideally, some knowledge of web or visual design, plus user experience best practices
 
 			
+			
+<--- Week 1 & 2 JavaScript & Node.js --->
+
+While learning popular web technologies, the focus of the first two weeks is on helping students appreciate what it means to be a good developer. We want students to become developers that know many technologies, as well as one that has a good approach, rapid experimentation, incremental building, and sharp debugging skills.
+
+1. JavaScript & Node.js
+2. Express, MongoDB & JSON
+3. Git & GitHub
+
+::Projects to try::
+GitrDone: A command-line client application that communicates with GitHub's public API. 
+TinyApp: A bit.ly-like URL shortener.
+
+
+
+<--- Week 3 & 4 Front-End Development & Group Projects  --->
+
+Building on the coding concepts and technologies learned in the first two weeks, the focus shifts towards front-end programming. Once students are comfortable with HTML & CSS, we’ll introduce them to working with relational databases & SQL, which are extremely prevalent in most web applications.
+
+1. HTML5 & CSS3
+2. Client-side JavaScript
+3. jQuery & AJAX
+
+::Project to try::
+Tweetr: A single-page mini twitter clone.
+
+
+
+<--- Week 5 & 6 Preparing for Reality  --->
+
+Every successful developer should be a polyglot. In reality, modern web applications need to be real-time and highly interactive. Weeks 5 & 6 are spent expanding horizons and exposing students to a multitude of languages and paradigms.
+
+1. Ruby & Ruby on Rails
+2. React
+3. WebSockets
+4. Object Oriented Programming
+
+::Project to try::
+Slackr: A Slack-like real-time chat application built using modern JavaScript tooling. 
+Rails: Inherit and enhance a pre-existing Rails application.
+
+
+
+<--- Week 7 & 8 Final Project & Advanced Topics  --->
+
+For their final project, Cretae a portfolio website/app that provides information about thier career goals and demo of past projects.
+		
 		</pre>
 	</body>
 </html>
