--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>How to become Full stack developer ?</title>
 	</head>
-	<body background="1.jpg">
+	<body background="1.jpg" style="color:white;">
 		<pre>
 		
 		
