--- a/index.html
+++ b/index.html
@@ -10,41 +10,41 @@
 		
 		
 		
-			<b>How to become Full stack developer ?</b>
+<b>How to become Full stack developer ?</b>
+			
 		
-		
-		
-			Things to learn in choronology :
+Things to learn in choronology :
 			
-			Step 1 :
-			Front end development -->	HTML5	CSS	Clent side Javascript programming
+Step 1 :
+Front end development -->	HTML5	CSS	Clent side Javascript programming
 			
-			Step 2 :
-			Back end developement -->      Python or Ruby or PHP or Node JS
+Step 2 :
+Back end developement -->      Python or Ruby or PHP or Node JS
 			
-			Step 3 :
-			Database Programming -->	MySQL or Oracle or SQL or MongoDB
+Step 3 :
+Database Programming -->	MySQL or Oracle or SQL or MongoDB
 			
-			Step 4:
-			Framework to bundle up everything you learn in previous steps -->	Django or Express or Rails
+Step 4:
+Framework to bundle up everything you learn in previous steps -->	Django or Express or Rails
 			
 			
 			
-			You’ll typically see a mix of front and back end skills listed on full stack web developer job listings, including:
-    			HTML, CSS, JavaScript
-    			Ideally, one or more third-party library like ReactJS or Angular or Express
-    			Programming languages and libraries like Ruby, PHP, Python
-    			Experience with databases
-    			Version control --> GIT / GitHub
-    			Knowledge of security concerns and best practices
-    			Ideally, some knowledge of web or visual design, plus user experience best practices
+You’ll typically see a mix of front and back end skills listed on full stack web developer job listings, including:
+HTML, CSS, JavaScript
+Ideally, one or more third-party library like ReactJS or Angular or Express
+Programming languages and libraries like Ruby, PHP, Python
+Experience with databases
+Version control --> GIT / GitHub
+Knowledge of security concerns and best practices
+Ideally, some knowledge of web or visual design, plus user experience best practices
 
-			
+=======================================================================================================================
+=======================================================================================================================
 			
 <--- Week 1 & 2 JavaScript & Node.js --->
-
+</pre>
 While learning popular web technologies, the focus of the first two weeks is on helping students appreciate what it means to be a good developer. We want students to become developers that know many technologies, as well as one that has a good approach, rapid experimentation, incremental building, and sharp debugging skills.
-
+<pre>
 1. JavaScript & Node.js
 2. Express, MongoDB & JSON
 3. Git & GitHub
@@ -56,9 +56,9 @@ TinyApp: A bit.ly-like URL shortener.
 
 
 <--- Week 3 & 4 Front-End Development & Group Projects  --->
-
+</pre>
 Building on the coding concepts and technologies learned in the first two weeks, the focus shifts towards front-end programming. Once students are comfortable with HTML & CSS, we’ll introduce them to working with relational databases & SQL, which are extremely prevalent in most web applications.
-
+<pre>
 1. HTML5 & CSS3
 2. Client-side JavaScript
 3. jQuery & AJAX
@@ -69,9 +69,9 @@ Tweetr: A single-page mini twitter clone.
 
 
 <--- Week 5 & 6 Preparing for Reality  --->
-
+</pre>
 Every successful developer should be a polyglot. In reality, modern web applications need to be real-time and highly interactive. Weeks 5 & 6 are spent expanding horizons and exposing students to a multitude of languages and paradigms.
-
+<pre>
 1. Ruby & Ruby on Rails
 2. React
 3. WebSockets
@@ -84,9 +84,7 @@ Rails: Inherit and enhance a pre-existing Rails application.
 
 
 <--- Week 7 & 8 Final Project & Advanced Topics  --->
-
+</pre>
 For their final project, Cretae a portfolio website/app that provides information about thier career goals and demo of past projects.
-		
-		</pre>
-	</body>
+</body>
 </html>
