--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		
 		
 		
-<b>How to become Full stack developer ?</b>
+<h3>How to become Full stack developer ?</h3>
 			
 		
 Things to learn in choronology :
